--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,13 @@
-
-<a href="https://study-rails-sample-app-mannaka.c9users.io/static_pages/about">About</a>
-<a href="https://study-rails-sample-app-mannaka.c9users.io/static_pages/home">Contact</a>
-<a href="https://study-rails-sample-app-mannaka.c9users.io/static_pages/help">Help</a>
-<a href="https://study-rails-sample-app-mannaka.c9users.io/static_pages/privacy_policy">個人情報保護方針</a>
+<footer class="footer">
+  <small>
+    <a href="http://railstutorial.org/">Rails Tutorial</a>
+    by Michael Hartl
+  </small>
+  <nav>
+    <ul>
+      <li><%= link_to "About",   '#' %></li>
+      <li><%= link_to "Contact", '#' %></li>
+      <li><a href="http://news.railstutorial.org/">News</a></li>
+    </ul>
+  </nav>
+</footer>
