--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,13 +14,11 @@
     <div class ="container">
       
         <% flash.each do |key,value| %>
-        <%div class "alert <%= bootstrap_class_for(key) %>"><%= value %></div>
-        
+        <div class="alert <%= bootstrap_class_for(key) %>"><%= value %></div>
         <% end %>
         <%= yield %>
+        <%= render 'shared/footer' %>
+        <%=debug(params) if Rails.env.deveropment? %>
     </div>
-    
-   <%= render 'shared/footer' %>
-
 </body>
 </html>
