--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
         <% end %>
         <%= yield %>
         <%= render 'shared/footer' %>
-        <%=debug(params) if Rails.env.deveropment? %>
+        <%=debug(params) if Rails.env.development? %>
     </div>
 </body>
 </html>
