--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,9 +1,9 @@
 <% provide(:title,"Edit user") %>
 <h1>Update your profile</h1>
 
-<%=form_for(resource, as: resource_name, url: registration_path(resource_name), html:{method: :put}) do>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <div class="row">
-  <div class="col-md-6 col-md-offset-3">
+    <div class="col-md-6 col-md-offset-3">
   
   <% render 'shared/error_messages', object: f.object %>
   
@@ -19,7 +19,7 @@
   
   <div class="field">
     <%= f.label :email,class:"control-rabel" %>
-    <%= f.email_field :email, autofocus true,class: "form-control" %>
+    <%= f.email_field :email, autofocus: true, class: "form-control" %>
   </div>
   
   <%if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
