Finish user follow / unfollow actions

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,3 +1,12 @@
+<%#= 部分テンプレートファイル（複数の画面で共通に使うファイルは「_」アンダーバーをファイルの先頭に着ける
+ファイル名はなんでもよい）
+保存場所はapp/view配下ならどこでもよい　
+部分テンプレートの埋め込みは、テンプレート内の埋め込みたい場所にrenderメソッドを使う
+　render 'ディレクトリ名/部分テンプレート名'
+-%>
+
+<%#= 任意のコードは '＜% %＞' 値を返す式は'＜%= %＞' -%>
+
 <li>
     <%= gravatar_for user, size:52 %>
     <%= link_to user.name ,user %>
