--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -119,9 +119,34 @@ aside {
   }
 }
 
-.gravatar {
-  float: left;
-  margin-right: 10px;
+.stats {
+  overflow: auto;
+    a{
+      float: left;
+      padding: 0 10px;
+      border-left: 1px solid $gray-lighter;
+      color: gray;
+      &:first-child{
+        padding-left: 0;
+        border: 0;
+      }
+    
+      &:hober {
+        text-decoration: none;
+        color: blue;
+      }
+  }
+  strong {
+    display: block;
+  }
+}
+
+.user_avatars {
+  overflow: auto;
+  margin-top: 10px;
+  gravatar {
+    margin: 1px 1px;
+  }
 }
 
 /* forms */
