--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,7 +7,17 @@
         <%= @user.name %>
       </h1>
     </section>
+    <section>
+      <%= render 'shared/stats' %>
+    </section>
   </aside>
+  <div class ="col-md-8">
+    <div class= "row">
+      <div class="col-md-3">
+        <%= render 'follow_form' if signed_in? %>
+      </div>
+    </div>
+  </div>
   <div class="col-md-8">
     <% if @user.microposts.any? %>
       <h3>Microposts(<%= @user.microposts.count %>)</h3>
@@ -15,6 +25,6 @@
         <%= render @microposts %>
       </ol>
       <%= will_paginate @microposts, renderer: BootstrapPagination::Rails %>
-    <% end %>
+    <% end %> 
   </div>
 </div>
