--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -9,6 +9,10 @@
 
 <li>
     <%= gravatar_for user, size:52 %>
+    
+    <%#= link_to ヘルパーはブロックとして使用できる。ブロック内（endまで）のものに
+   　　　　<a>タグでリンクがつけられる    %>
+    
     <%= link_to user.name ,user %>
     <% if current_user.admin? && !(current_user == user) %>
         | <%= link_to "delete", user, method: :delete, data: { confirm: "You sure?" } %>
