--- a/app/views/users/search.html.erb
+++ b/app/views/users/search.html.erb
@@ -1,5 +1,5 @@
-<% provide(:title, 'All users') %>
-<h1>All users</h1>
+<% provide(:title, 'Result') %>
+<h1>Result</h1>
 
 <%# 検索窓 %>
 <%= form_tag(controller: :users, action: :search) do %>
@@ -7,7 +7,6 @@
   <%= text_field_tag(:q) %>
   <%= submit_tag("Search") %>
 <% end %>
-
 
 <%= will_paginate renderer: BootstrapPagination::Rails %>
 
